<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Taroky</string>
    <string name="action_settings">Settings</string>
    <string name="new_game">Nová hra</string>
    <string name="load_game">Načíst hru</string>
    <string name="load_game_anyway">Načíst předchozí hru</string>
    <string name="title_activity_new_game">Nová hra</string>
    <string name="hello_world">Hello world!</string>
    <string name="first_player">První (začínající) hráč</string>
    <string name="second_player">Druhý hráč</string>
    <string name="third_player">Třetí hráč</string>
    <string name="fourth_player">Čtvrtý hráč (míchá karty)</string>
    <string name="start_game">Začít hru</string>
    <string name="first">1. povinnost</string>
    <string name="second">2. povinnost</string>
    <string name="third">3. povinnost</string>
    <string name="fourth">4. povinnost</string>
    <string name="warszaw">Varšava</string>
    <string name="add_jew">Spálená hra</string>
    <string name="jew">Žid</string>
    <string name="continue_game">Další kolo</string>
    <string name="first_desc">Zaškrtněte vydražitele a jeho spoluhráče</string>
    <string name="toomany">Zaškrtnuto příliš mnoho hráčů</string>
    <string name="first_points">Počet bodů vydražitele</string>
    <string name="count_points">Spočítat body</string>
    <string name="new_jew_points">Počet bodů do žida</string>
    <string name="pagat">Pokud vydražitel uhrál pagáta</string>
    <string name="back">Zpět</string>
    <string name="delete_last">Kolo zpět</string>
    <string name="radiobutton_desc">Zaškrtněte vydražitele</string>
    <string name="warsz_desc">Napište, kolik kdo odečítá</string>
    <string name="yes">Ano</string>
    <string name="cancel">Ne</string>
    <string name="dialog_new_game">Opravdu chcete začít novou hru?</string>
    <string name="save">Uložit hru</string>
    <string name="faulting_player">Zaškrtněte chybujícího hráče</string>
    <string name="wrong_points">Špatně vyplněný počet bodů</string>
    <string name="wrong_points1">Špatně vyplněný počet bodů u prvního hráče</string>
    <string name="wrong_points2">Špatně vyplněný počet bodů u druhého hráče</string>
    <string name="wrong_points3">Špatně vyplněný počet bodů u třetího hráče</string>
    <string name="wrong_points4">Špatně vyplněný počet bodů u čtvrtého hráče</string>
    <string name="at_least_one_player">Zaškrtněte alespoň jednoho hráče</string>
    <string name="exactly_one_player">Vyberte jednoho hráče</string>
    <string name="too_many_players">Zaškrtnuto příliš mnoho hráčů</string>
    <string name="shuffling_player">míchá</string>

</resources>