<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".NewGameActivity"
     android:id="@+id/game" >

    
    <EditText android:id="@+id/first_player"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_player" />
    <EditText android:id="@+id/second_player"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/second_player" />
    <EditText android:id="@+id/third_player"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/third_player" />
    <EditText android:id="@+id/fourth_player"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fourth_player" />
    
    <Button
            android:id="@+id/start_game"
            style="@style/buttons"
            android:text="@string/start_game" 
	        android:onClick="startGame"
	        />
    <Button
            android:id="@+id/load_game_anyway"
            style="@style/buttons"
            android:text="@string/load_game_anyway"
            android:onClick="loadGameAnyway" />

</LinearLayout>
